--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
-  "name": "statuta-mock",
-  "version": "0.1.0",
+  "name": "statuta-monorepo",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "ci": "node scripts/ci-lint.mjs"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "test": "tsx engine/tests/run-tests.ts",
+    "ci": "npm run build:evidence && npm run test",
+    "build:evidence": "tsx scripts/build-evidence.ts"
   },
   "devDependencies": {
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10"
+    "tsx": "^4.19.0",
+    "typescript": "^5.6.3"
   }
 }
